appId: com.ton_keeper.debug
---
- assertVisible: Buy & Sell Crypto
- assertVisible: "5"
- tapOn:
    id: input_currency
- tapOn: USD₮ TRC20
- back
- back
